<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileProfileImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:src="@drawable/profile"/>

            <TextView
                android:id="@+id/profileFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileName"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/profileProfileImage"/>

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_below="@id/profileFullName"/>

            <TextView
                android:id="@+id/profileStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileStatusMessage"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/colorGrey"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_below="@id/profileUsername"/>

            <TextView
                android:id="@+id/profileLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userLocation"
                android:textAlignment="center"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_below="@id/profileStatus"/>

            <TextView
                android:id="@+id/profileDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileDob"
                android:textAlignment="center"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_below="@id/profileLocation"/>

            <TextView
                android:id="@+id/profilePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profilePhoneNumber"
                android:textAlignment="center"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_below="@id/profileDob"/>

            <TextView
                android:id="@+id/profileGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profileGender"
                android:textAlignment="center"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_below="@id/profilePhoneNumber"/>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>