<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/settingsToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/settingsScrollView"
        android:layout_width="408dp"
        android:layout_height="666dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settingsProfileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:src="@drawable/profile"/>

            <EditText
                android:id="@+id/edtSettingsStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsProfileImage"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:inputType="none"
                android:background="@drawable/input_field"
                android:hint="@string/settingsStatus"
                android:padding="30dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edtSettingsUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtSettingsStatus"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/input_field"
                android:hint="@string/settingsUsername"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/edtSettingsFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtSettingsUsername"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/settingsFullName"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/edtSettingsLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtSettingsFullName"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/settingsLocation"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/edtSettingsDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtSettingsLocation"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="6dp"
                android:inputType="date"
                android:background="@drawable/input_field"
                android:hint="@string/settingsDOB"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/edtSettingsNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtSettingsDOB"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="6dp"
                android:inputType="number"
                android:background="@drawable/input_field"
                android:hint="@string/settingsPhoneNumber"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/edtSettingsGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtSettingsNumber"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_field"
                android:hint="@string/settingsGender"
                android:padding="12dp"/>

            <Button
                android:id="@+id/butUpdateSettings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/edtSettingsGender"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button"
                android:text="@string/settingsUpdateButton"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>