<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="5dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/postProfilePicture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile"
                android:scaleType="centerCrop"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPostName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/postName"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="textStart"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="6dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:padding="2dp"
                    android:layout_marginStart="5dp">

                    <TextView
                        android:id="@+id/txtPostUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/postUploaded"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/txtPostDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/postDate"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"/>

                    <TextView
                        android:id="@+id/txtPostTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/postTime"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/postDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postDescription"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:padding="3dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>
        
        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="3dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>

    </LinearLayout>


</RelativeLayout>